css/style.css
:root {
    --color-bg: #282c34;
    --color-text: #c6d0f5;
    /* --color-blue: #8caaee; */
    --color-blue: rgb(148, 177, 255);
    --color-green: #a6d189;
    /* --color-purple: #babbf1; */
    --color-purple: #aaabee;
    --color-yellow: #e5c890;
    --color-red: #e78284;
    --color-orange: #ef9f76;
    --color-math: var(--color-yellow);
    --color-link: var(--color-green);
    --color-accent: var(--color-blue);
    --color-highlight-bg: var(--color-accent);
    --color-highlight: black;

    --buffer-width: 30px;
    --editor-width: min(700px, 90vw);
    --font-size: calc(var(--editor-width) / 25);
    --linenum-font-size: 18px;
    --tab-full-width: calc(2 * var(--font-size));
    --font-face: 'author';
    --font-weight: 200;
    --text-decoration-thickness: 0.07rem;
    --shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
    --shadow-lg: 0px 1.8px 7.3px rgba(0, 0, 0, 0.071), 0px 6.3px 24.7px rgba(0, 0, 0, 0.112), 0px 30px 90px rgba(0, 0, 0, 0.2);

    --bold-weight: 400;
    --Bold-weight: 600;
    --math-font-size: 0.8;
    --link-font-size: 1;
    --small-font-size: 0.7;
    --large-font-size: 1.4;
    --DM-font-size: 0.85;
    --line-height: 1.1;
    --line-padding: 0;
    --IM-font-size: 0.9;
    --IM-editing-font-size: 0.8;
}

@font-face {
    font-family: 'tex';
    src: url("../fonts/ligatures/normal.woff2");
    font-weight: 200;
    /* src: url("./fonts/mathjax/mjx-tex-n.woff2"); */
    /* unicode-range: U+2190, U+2192, U+2194, U+21A4, U+21A6, U+21D0, U+21D2, U+21D4; */
}

@font-face {
    font-family: 'tex';
    src: url("../fonts/ligatures/bold.woff2");
    font-weight: 400;
    /* src: url("./fonts/mathjax/mjx-tex-n.woff2"); */
    /* unicode-range: U+2190, U+2192, U+2194, U+21A4, U+21A6, U+21D0, U+21D2, U+21D4; */
}

/* @font-face { */
/*     font-family: 'feijoa'; */
/*     src: url("../fonts/Feijoa-Font/Feijoa Medium.otf"); */
/* } */

@font-face {
    font-family: 'author';
    src: url("../fonts/author/Author-Extralight.otf");
    font-weight: 100;
}

@font-face {
    font-family: 'author';
    src: url("../fonts/author/Author-Light.otf");
    font-weight: 200;
}

@font-face {
    font-family: 'author';
    src: url("../fonts/author/Author-Regular.otf");
    font-weight: 300;
}

@font-face {
    font-family: 'author';
    src: url("../fonts/author/Author-Medium.otf");
    font-weight: 400;
}

@font-face {
    font-family: 'author';
    src: url("../fonts/author/Author-Semibold.otf");
    font-weight: 600;
}

@font-face {
    font-family: 'author';
    src: url("../fonts/author/Author-Bold.otf");
    font-weight: 900;
}

/* *:not(.dcg-dom-change-wrapper *) { */
#alerts,
#prompts,
.editor .textarea,
.editor .info,
.modal {
    user-select: text;
    touch-action: manipulation;
    -webkit-user-select: text;
    font-weight: var(--font-weight);
    color: var(--color-text);
    text-decoration-thickness: var(--text-decoration-thickness);
    scrollbar-width: thin;
}

*:not(.DM *, .IM *, .dcg-dom-change-wrapper *) {
    /* font-family: 'tex', var(--font-face); */
    font-family: var(--font-face);
}

html,
body {
    margin: 0;
}

html {
    background-color: var(--color-bg);
    position: relative;
    min-height: 100vh;
    overflow-x: hidden;
    overflow-y: hidden;
}

html.lineNumbers {
    counter-reset: lineNumber var(--firstRenderedLine);
}

html.relNumbers {
    counter-reset: relLineNumber calc(abs(var(--caretLineNum) - var(--firstRenderedLine)));
}

.noisy::before {
    content: "";
    position: absolute;
    inset: 0;
    background: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='500' height='500'%3E%3Cfilter id='noise' x='0' y='0'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3CfeBlend mode='screen'/%3E%3C/filter%3E%3Crect width='500' height='500' filter='url(%23noise)' opacity='0.5'/%3E%3C/svg%3E");
    mix-blend-mode: soft-light;
    pointer-events: none;
    border-radius: inherit;
}

.editor {
    overflow-y: scroll;
    overflow-x: hidden;
    position: absolute;
    inset: 0;
    padding-top: 10vh;
    overflow-anchor: none;
}

.textarea {
    font-size: var(--font-size);
    max-width: var(--editor-width);
    margin: 0 auto;
    white-space: pre-wrap;
    text-shadow: var(--shadow);
}

.textarea p {
    margin: 0;
    line-height: calc(var(--line-height) * var(--font-size));
    padding: var(--line-padding) 0;
    position: relative;
}

html.lineNumbers .textarea p,
html.lineNumbers .DM,
html.relNumbers .textarea p,
html.relNumbers .DM {
    position: relative;
    margin-left: var(--buffer-width);
}

html.lineNumbers .textarea p::before,
html.relNumbers .textarea p::before {
    color: inherit;
    /* filter: brightness(80%); */
    /* color: var(--color-accent); */
    opacity: 0.8;
    font-size: var(--linenum-font-size);
    position: absolute;
    left: -30px;
    transform: translate(-100%, 0);
    font-weight: var(--font-weight);
}

html.lineNumbers .textarea p::before {
    counter-increment: lineNumber;
    content: counter(lineNumber);
}

html.relNumbers .textarea p::before {
    counter-increment: relLineNumber sign(var(--firstRenderedLine) - var(--caretLineNum));
    content: counter(relLineNumber);
    opacity: 0.5;
}

html.relNumbers .textarea p.caretInside::before {
    opacity: 1;
    content: attr(lineNum);
    /* left: calc(-25px - var(--buffer-width)); */
    /* transform: none; */
}

html.relNumbers .textarea p.caretInside+* {
    counter-reset: relLineNumber 0;
}

html.relNumbers .textarea p.caretInside~p::before {
    counter-increment: relLineNumber 1;
    content: counter(relLineNumber);
}
/* ... */

